Revision history for WebService-NFSN

0.10   NOT
	- Concatenate generated code to use fewer string evals

0.09   November 11, 2010
	- Use Scalar::Util's reftype instead of UNIVERSAL::isa

	- Cleaned up usage of eval and $@ (using Try::Tiny where possible)

	- Changed examples/nfsn.pl to get credentials from .nfsn-api

	- Switched from Digest::SHA1 to Digest::SHA, because the
	  latter became a core module in Perl 5.10.

0.08   September 28, 2008
	- The constructor now reads login credentials from .nfsn-api
	  if you don't supply them as parameters.

0.07   September 27, 2008
	- Added the optional ttl parameter to the DNS addRR method.

0.06   August 28, 2008
	- Added the addSite method to Account objects

	- If the authentication timestamp is out of range, appends both
	  the client's & server's time to the debug field of the error.

0.05   April 25, 2008
	- Now compatible with JSON::XS 2 (but still works with 1.x).
	  You can also substitute pure-Perl JSON 2, but it's slower.

0.04   December 19, 2007
	- Added the listForwards method to Email objects

0.03   August 9, 2007
	- Added the sites property to Member objects

0.02   July 7, 2007
	- Now does parameter validation on method calls

	    Omitting a required parameter now generates a client-side
	    error.  Using an unknown parameter generates a warning.

0.01   April 6, 2007
	- Initial release