@@ -10,15 +10,19 @@ copyright_holder = Christopher J. Madsen
 builder    = ModuleBuild::Custom
 mb_version = 0.21
 
+[ShareDir]
+
 [Prereqs]
 perl                    = 5.006
 Carp                    = 0
 Digest::SHA             = 0
 Exception::Class        = 0
 Exporter                = 0
+File::ShareDir          = 0
 File::Spec              = 0
 JSON::XS                = 1
 LWP                     = 5
+LWP::Protocol::https    = 0
 HTTP::Request::Common   = 0
 Scalar::Util            = 1.01 ; reftype
 Try::Tiny               = 0.04
