@@ -1,0 +1,21 @@
+-----BEGIN CERTIFICATE-----
+MIIDjDCCAvWgAwIBAgIBADANBgkqhkiG9w0BAQQFADCBkTELMAkGA1UEBhMCVVMx
+DjAMBgNVBAgTBVRleGFzMRYwFAYDVQQHEw1UaGUgV29vZGxhbmRzMRMwEQYDVQQK
+EwpORlNOLCBJbmMuMTMwMQYDVQQLEypOZWFybHlGcmVlU3BlZWNoLk5FVCBDZXJ0
+aWZpY2F0ZSBBdXRob3JpdHkxEDAOBgNVBAMTB05GU04gQ0EwHhcNMDQwNzMwMjMw
+NjQ3WhcNMTQwNzI4MjMwNjQ3WjCBkTELMAkGA1UEBhMCVVMxDjAMBgNVBAgTBVRl
+eGFzMRYwFAYDVQQHEw1UaGUgV29vZGxhbmRzMRMwEQYDVQQKEwpORlNOLCBJbmMu
+MTMwMQYDVQQLEypOZWFybHlGcmVlU3BlZWNoLk5FVCBDZXJ0aWZpY2F0ZSBBdXRo
+b3JpdHkxEDAOBgNVBAMTB05GU04gQ0EwgZ8wDQYJKoZIhvcNAQEBBQADgY0AMIGJ
+AoGBAMTNaw9akY8tZfUgM7m4uEgcJEwq1eoX1gIuv9VZ7RVMKe5L6Sc31yEI3bxQ
+wjFjZbxQMfGOPUoBzyB2uWiyFf0N1thSbq3stFhJVjOk/F68fJdYUN7nqfmvve/U
+Z9ILQm+KNJYDKF6g/NhwVxlogzF6v3MJr43mxcMzpIpv1g+fAgMBAAGjgfEwge4w
+HQYDVR0OBBYEFAUV17b7WHspDVPf1nQ8DmIjCdVpMIG+BgNVHSMEgbYwgbOAFAUV
+17b7WHspDVPf1nQ8DmIjCdVpoYGXpIGUMIGRMQswCQYDVQQGEwJVUzEOMAwGA1UE
+CBMFVGV4YXMxFjAUBgNVBAcTDVRoZSBXb29kbGFuZHMxEzARBgNVBAoTCk5GU04s
+IEluYy4xMzAxBgNVBAsTKk5lYXJseUZyZWVTcGVlY2guTkVUIENlcnRpZmljYXRl
+IEF1dGhvcml0eTEQMA4GA1UEAxMHTkZTTiBDQYIBADAMBgNVHRMEBTADAQH/MA0G
+CSqGSIb3DQEBBAUAA4GBAJc+Rh3mNrwy0c3QaR1qLvZdoZP1fhU1RWxWG/ex0/M1
+jVPvvfExn6UrDGtLMDUn1MwnQ5PtQ1fmwGqiev7N4uEOqiUdcgO4+ZAUHxSyOHX2
+Tj5CJ8PhRwlJBf/X8keQAXJtRexAPJgvHabb/aQrOoB9Gh4kBuQHt/Ijyg9+cg0M
+-----END CERTIFICATE-----
